# py-project-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  repo_name_README.md  settings.toml  setup.sh
src/repo_name/: __init__.py
src/repo_name/tools/cli/: __init__.py
src/repo_name/utils/config/: __init__.py
src/repo_name/utils/logging/: __init__.py
